--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
   </body>
 </html>
